# size

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
example/: README.md  pubspec.yaml  size_example.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: size.dart
lib/shared/: CMakeLists.txt
lib/shared/src/: fsize.cpp
linux/: CMakeLists.txt  size_plugin.cc  size_plugin_lib.cc
linux/include/size/: size_plugin.h
test/: size_test.dart
windows/: CMakeLists.txt  size_plugin_lib.cpp
windows/include/size/: size_plugin.h
windows/src/: CMakeLists.txt  size_lib.cpp  size_lib.h
